--- a/src/canvas/package.json
+++ b/src/canvas/package.json
@@ -2,7 +2,7 @@
   "name": "crawler-canvas",
   "version": "1.0.0",
   "description": "",
-  "main": "canvas.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
