--- a/src/canvas/package.json
+++ b/src/canvas/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "webpack": "webpack -w"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "webpack": "^1.13.1"
   }
 }
